# ai-voice-architectures

./: README.md
.github/instructions/: general.instructions.md
src/e2e_voice/: main.py  pyproject.toml
src/realtime/: .env.example  README.md  main.py  pyproject.toml  test_audio.py
src/realtime/configs/: push-to-talk.yaml  semantic-vad.yaml  server-vad-robust.yaml  server-vad-sensitive.yaml  server-vad.yaml
src/realtime/templates/: system_prompt.j2
src/text_core/: main.py  pyproject.toml
src/voicelive/: .env.example  README.md  TRANSCRIPTION.md  main.py  pyproject.toml
src/voicelive/configs/: azure-semantic-vad-multilingual.yaml  azure-semantic-vad.yaml  gpt-4-1.yaml  gpt-realtime.yaml  push-to-talk.yaml  server-vad-robust.yaml  server-vad-sensitive.yaml  server-vad.yaml
src/voicelive/templates/: system_prompt.j2
