[project]
name = "realtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai[realtime]>=1.59.5",
    "azure-identity>=1.23.0",
    "python-dotenv>=1.1.0",
    "pyaudio>=0.2.14", # Added for microphone input
    "pynput>=1.7.6", # Added for keyboard listening
    "sounddevice>=0.5.1", # Direct audio streaming without temp files (better for Bluetooth)
    "numpy>=1.26.0", # Required by sounddevice
    "pyyaml>=6.0.0", # Added for YAML configuration support
    "jinja2>=3.1.0", # Added for system prompt templates
]
